==> jameswalmsley/bitthunder/arch/arm/mach/lm3sxx/uart.c <==
#include <bitthunder.h>	 				// Include all those wonderful BitThunder APIs.
#include "uart.h"						// Includes a full hardware definition for the integrated uarts.
#include "rcc.h"						// Used for getting access to rcc regs, to determine the real Clock Freq.
#include "ioconfig.h"						// Used for getting access to IOCON regs.
#include <collections/bt_fifo.h>

static void usartRxHandler(BT_HANDLE hUart) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;
	BT_u8 ucData;

	BT_ERROR Error = BT_ERR_NONE;

	while (!(pRegs->FR & LM3Sxx_UART_FR_RXFE))	{
		ucData = pRegs->DR & 0xFF;
		BT_FifoWrite(hUart->hRxFifo, 1, &ucData, &Error);
	}
}

static void usartTxHandler(BT_HANDLE hUart) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;
	BT_u8 ucData;

	BT_ERROR Error = BT_ERR_NONE;

	while (!BT_FifoIsEmpty(hUart->hTxFifo, &Error) && (!(pRegs->FR & LM3Sxx_UART_FR_TXFF))) {
		BT_FifoRead(hUart->hTxFifo, 1, &ucData, &Error);
		pRegs->DR = ucData;
	}
	if (BT_FifoIsEmpty(hUart->hTxFifo, &Error)) {
		pRegs->IM &= ~LM3Sxx_UART_INT_TX;	// Disable the interrupt
	}
}

static BT_ERROR uartSetBaudrate(BT_HANDLE hUart, BT_u32 ulBaudrate) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

	BT_u32	ulInputClk;
	BT_u32	BaudRate = ulBaudrate;

	/*
	 *	We must determine the input clock frequency to the UART peripheral.
	 */

	ulInputClk = BT_LM3Sxx_GetSystemFrequency();

	uartDisable(hUart);

	/*
	 * Determine the Baud divider. It can be 4to 254.
	 * Loop through all possible combinations
	 */

    // Is the required baud rate greater than the maximum rate supported
    // without the use of high speed mode?
    if((BaudRate * 16) > ulInputClk) {
        // Enable high speed mode.
        pRegs->CTL |= LM3Sxx_UART_CTL_HSE;

        // Half the supplied baud rate to compensate for enabling high speed
        // mode.  This allows the following code to be common to both cases.
        BaudRate /= 2;
    }
    else {
        // Disable high speed mode.
    	pRegs->CTL &= ~(LM3Sxx_UART_CTL_HSE);
    }

    // Compute the fractional baud rate divider.
    BT_u32 ulDiv = (((ulInputClk * 8) / BaudRate) + 1) / 2;

    // Set the baud rate.
    pRegs->IBRD = ulDiv / 64;
    pRegs->FBRD = ulDiv % 64;

    // Start the UART.
	uartEnable(hUart);
	return BT_ERR_NONE;
}

static void enableUartPeripheralClock(BT_HANDLE hUart) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hUart->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_UART0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_UART1EN;
		break;
	}
	case 2: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_UART2EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableUartPeripheralClock(BT_HANDLE hUart) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hUart->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_UART0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_UART1EN;
		break;
	}
	case 2: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_UART2EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isUartPeripheralClockEnabled(BT_HANDLE hUart) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hUart->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_UART0EN) {
			return BT_TRUE;
		}
		break;
	}
	case 1: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_UART1EN) {
			return BT_TRUE;
		}
		break;
	}
	case 2: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_UART2EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}

static BT_ERROR uartSetConfig(BT_HANDLE hUart, BT_UART_CONFIG *pConfig) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

	BT_ERROR Error = BT_ERR_NONE;

	uartSetBaudrate(hUart, pConfig->ulBaudrate);

	uartDisable(hUart);

    // Set parity, data length, and number of stop bits.
    pRegs->LCRH = (pConfig->ucDataBits - 5) << 5;
	pRegs->LCRH |= (pConfig->ucStopBits) << 3;
	if (pConfig->ucParity == BT_UART_PARITY_ODD)   pRegs->LCRH |= LM3Sxx_UART_LCRH_ODD;
	if (pConfig->ucParity == BT_UART_PARITY_EVEN)  pRegs->LCRH |= LM3Sxx_UART_LCRH_EVEN;
	if (pConfig->ucParity == BT_UART_PARITY_MARK)  pRegs->LCRH |= LM3Sxx_UART_LCRH_MARK;
	if (pConfig->ucParity == BT_UART_PARITY_SPACE) pRegs->LCRH |= LM3Sxx_UART_LCRH_SPACE;

    // Clear the flags register.
    pRegs->FR = 0;

    uartEnable(hUart);

	switch(pConfig->eMode) {
	case BT_UART_MODE_POLLED: {
		if(hUart->eMode !=  BT_UART_MODE_POLLED) {

			if(hUart->hTxFifo) {
				BT_CloseHandle(hUart->hTxFifo);
				hUart->hTxFifo = NULL;
			}
			if(hUart->hRxFifo) {
				BT_CloseHandle(hUart->hRxFifo);
				hUart->hRxFifo = NULL;
			}

			// Disable TX and RX interrupts
			pRegs->IM &= ~(LM3Sxx_UART_INT_RX | LM3Sxx_UART_INT_RT);	// Disable the interrupt

			hUart->eMode = BT_UART_MODE_POLLED;
		}
		break;
	}

	case BT_UART_MODE_BUFFERED:
	{
		if(hUart->eMode != BT_UART_MODE_BUFFERED) {
			if(!hUart->hRxFifo && !hUart->hTxFifo) {
				hUart->hRxFifo = BT_FifoCreate(pConfig->ulRxBufferSize, 1, 0, &Error);
				hUart->hTxFifo = BT_FifoCreate(pConfig->ulTxBufferSize, 1, 0, &Error);

				pRegs->IM |= LM3Sxx_UART_INT_RX | LM3Sxx_UART_INT_RT;	// Enable the interrupt
				hUart->eMode = BT_UART_MODE_BUFFERED;
			}
		}
		break;
	}

	default:
		// Unsupported operating mode!
		break;
	}

	return BT_ERR_NONE;
}

static BT_ERROR uartGetConfig(BT_HANDLE hUart, BT_UART_CONFIG *pConfig) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

	pConfig->eMode 			= hUart->eMode;

	BT_ERROR Error = BT_ERR_NONE;

	BT_u32 ulInputClk = BT_LM3Sxx_GetSystemFrequency();

    // Compute the baud rate.
    pConfig->ulBaudrate = (ulInputClk * 4) / ((64 * pRegs->IBRD) + pRegs->FBRD);
	pConfig->ulTxBufferSize = BT_FifoSize(hUart->hTxFifo, &Error);
	pConfig->ulRxBufferSize = BT_FifoSize(hUart->hRxFifo, &Error);
	pConfig->ucDataBits 	= ((pRegs->LCRH >> 5) & 0x00000003) + 5;
	pConfig->ucStopBits		= ((pRegs->LCRH >> 3) & 0x00000001) + 1;
	if ((pRegs->LCRH & 0x00000086) == LM3Sxx_UART_LCRH_EVEN) pConfig->ucParity = BT_UART_PARITY_EVEN;
	else if ((pRegs->LCRH & 0x00000086) == LM3Sxx_UART_LCRH_MARK) pConfig->ucParity = BT_UART_PARITY_MARK;
	else if ((pRegs->LCRH & 0x00000086) == LM3Sxx_UART_LCRH_SPACE) pConfig->ucParity = BT_UART_PARITY_SPACE;
	else if ((pRegs->LCRH & 0x00000086) == LM3Sxx_UART_LCRH_ODD) pConfig->ucParity = BT_UART_PARITY_ODD;
	else pConfig->ucParity = BT_UART_PARITY_NONE;
	pConfig->eMode			= hUart->eMode;


	return Error;
}

static BT_ERROR uartEnable(BT_HANDLE hUart) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;


    // Enable the FIFO.
	pRegs->LCRH |= LM3Sxx_UART_LCRH_FEN;

    // Enable RX, TX, and the UART.
	pRegs->CTL |= (LM3Sxx_UART_CTL_UARTEN | LM3Sxx_UART_CTL_TXE | LM3Sxx_UART_CTL_RXE);

	return BT_ERR_NONE;
}

static BT_ERROR uartDisable(BT_HANDLE hUart) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

    // Wait for end of TX.
    while(pRegs->FR & LM3Sxx_UART_FR_BUSY) {
    	BT_ThreadYield();
    }

    // Disable the FIFO.
    pRegs->LCRH &= ~(LM3Sxx_UART_LCRH_FEN);

    // Disable the UART.
    pRegs->CTL &= ~(LM3Sxx_UART_CTL_UARTEN | LM3Sxx_UART_CTL_TXE | LM3Sxx_UART_CTL_RXE);

    return BT_ERR_NONE;
}

static BT_ERROR uartRead(BT_HANDLE hUart, BT_u32 ulFlags, BT_u32 ulSize, BT_u8 *pucDest) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

	BT_ERROR Error = BT_ERR_NONE;

	switch(hUart->eMode) {
	case BT_UART_MODE_POLLED:
	{
		while(ulSize) {
			while((pRegs->FR & LM3Sxx_UART_FR_RXFE)) {
				BT_ThreadYield();
			}

			*pucDest++ = pRegs->DR & 0x000000FF;
			ulSize--;
		}
		break;
	}

	case BT_UART_MODE_BUFFERED:
	{
		// Get bytes from RX buffer very quickly.
		BT_FifoRead(hUart->hRxFifo, ulSize, pucDest, &Error);
		break;
	}

	default:
		// ERR, invalid handle configuration.
		break;
	}
	return Error;
}

static BT_ERROR uartWrite(BT_HANDLE hUart, BT_u32 ulFlags, BT_u32 ulSize, const BT_u8 *pucSource) {
	volatile LM3Sxx_UART_REGS *pRegs = hUart->pRegs;

	BT_ERROR Error = BT_ERR_NONE;
	BT_u8 ucData;
	BT_u8 *pSrc = (BT_u8*)pucSource;

	switch(hUart->eMode) {
	case BT_UART_MODE_POLLED:
	{
		while(ulSize) {
			while((pRegs->FR & LM3Sxx_UART_FR_TXFF)) {
				BT_ThreadYield();
			}
			pRegs->DR = *pucSource++;
			ulSize--;
		}
		break;
	}

	case BT_UART_MODE_BUFFERED:
	{
		BT_FifoWrite(hUart->hTxFifo, ulSize, pSrc, &Error);

		while (!BT_FifoIsEmpty(hUart->hTxFifo, &Error) && (!(pRegs->FR & LM3Sxx_UART_FR_TXFF))) {
			BT_FifoRead(hUart->hTxFifo, 1, &ucData, &Error);
			pRegs->DR = ucData;
		}
		pRegs->IM |= LM3Sxx_UART_INT_TX;	// Enable the interrupt
		break;
	}

	default:
		break;
	}
	return Error;
}

static BT_HANDLE uart_probe(const BT_INTEGRATED_DEVICE *pDevice, BT_ERROR *pError) {

	BT_ERROR Error = BT_ERR_NONE;
	BT_HANDLE hUart = NULL;


	const BT_RESOURCE *pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_ENUM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	if (g_USART_HANDLES[pResource->ulStart]){
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

	hUart = BT_CreateHandle(&oHandleInterface, sizeof(struct _BT_OPAQUE_HANDLE), pError);
	if(!hUart) {
		goto err_out;
	}

	g_USART_HANDLES[pResource->ulStart] = hUart;

	hUart->pDevice = pDevice;

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_MEM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	hUart->pRegs = (LM3Sxx_UART_REGS *) pResource->ulStart;

	uartSetPowerState(hUart, BT_POWER_STATE_AWAKE);

	// Reset all registers to their defaults!

	ResetUart(hUart);

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_IRQ, 0);
	if(!pResource) {
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

/*	On NVIC we don't need to register interrupts, LINKER has patched vector for us
 * Error = BT_RegisterInterrupt(pResource->ulStart, uart_irq_handler, hUart);
	if(Error) {
		goto err_free_out;
	}*/


	Error = BT_EnableInterrupt(pResource->ulStart);

	return hUart;

err_free_out:
	BT_kFree(hUart);

err_out:
	if(pError) {
		*pError = Error;
	}
	return NULL;
}
